修复多说报错问题

--- a/layout/_partial/footer-option.ejs
+++ b/layout/_partial/footer-option.ejs
@@ -16,9 +16,10 @@
     <!-- 多说公共 js 代码 start -->
     <script type="text/javascript">
         queue.offer(function(){
-            var duoshuoQuery = {
+            duoshuoQuery = {
                 short_name: '<%= theme.comment.shortname %>'
             };
+            console.log(duoshuoQuery);
             (function() {
                 var ds = document.createElement('script');
                 ds.type = 'text/javascript';
