--- a/source/css/style.css
+++ b/source/css/style.css
@@ -498,13 +498,32 @@ a {
         padding-top: 0
     }
 }
+  
+
 #scheme-Paradox .material-layout .mdl-card {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
     min-height: 400px;
-    flex-direction: column;
-    align-items: stretch;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
     border-radius: 2px;
+    -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
+
+#scheme-Paradox .material-layout .mdl-card:hover{
+    box-shadow: rgba(0, 0, 0, 0.247059) 0px 14px 45px, rgba(0, 0, 0, 0.219608) 0px 10px 18px;
+}
+
 @media screen and (max-width: 480px) {
     #scheme-Paradox .material-post .mdl-card {
         border-radius: 0;
