--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -83,9 +83,10 @@
     <%- css('https://cdn.bootcss.com/highlight.js/9.9.0/styles/github.min.css') %>
     <%- css('css/material.min') %>
     <%- css('css/style.min') %>
+    <%- css('css/selfAddGlobal') %>
     <%- partial('_partial/config_css') %>
     <% if(is_home()){ %>
-        <link rel="stylesheet" href="/css/selfstyle.css">
+        <%- css('css/selfstyle') %>
     <% } %>
     <%- js('https://cdn.bootcss.com/highlight.js/9.9.0/highlight.min.js') %>
     <%- js('js/jquery.min') %>
