--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -16,9 +16,16 @@
             <% if(theme.busuanzi.enable === true){ %>
                 <!-- Count -->
                 <div id="count">
-                    <span id="busuanzi_container_site_pv">
-                        本站总访问量<span id="busuanzi_value_site_pv"></span>次
-                    </span>
+                    <% if(!is_post()&&theme.busuanzi.all_site_uv){ %>
+                        <span id="busuanzi_container_site_pv">
+                            本站访问量<span id="busuanzi_value_site_pv"></span>次
+                        </span>
+                    <% } %>                   
+                    <% if(is_post()&&theme.busuanzi.post_pv){ %>
+                        <span id="busuanzi_container_page_pv">
+                            本文阅读量<span id="busuanzi_value_page_pv"></span>次
+                        </span>
+                    <% } %>
                 </div>
             <% } %>
             
